commit merge thing