@@ -1,5 +1,6 @@
 package com.github.phantazmnetwork.zombies.game;
 
+import com.github.phantazmnetwork.commons.Activable;
 import com.github.phantazmnetwork.commons.Namespaces;
 import com.github.phantazmnetwork.commons.vector.Vec3D;
 import com.github.phantazmnetwork.commons.vector.Vec3I;
@@ -38,6 +39,8 @@ import com.github.phantazmnetwork.zombies.game.player.BasicZombiesPlayer;
 import com.github.phantazmnetwork.zombies.game.player.ZombiesPlayer;
 import com.github.phantazmnetwork.zombies.game.player.ZombiesPlayerMeta;
 import com.github.phantazmnetwork.zombies.game.player.state.*;
+import com.github.phantazmnetwork.zombies.game.scoreboard.sidebar.GroupSidebarUpdaterActivable;
+import com.github.phantazmnetwork.zombies.game.scoreboard.sidebar.SidebarUpdater;
 import com.github.phantazmnetwork.zombies.game.stage.*;
 import com.github.phantazmnetwork.zombies.map.MapInfo;
 import com.github.steanky.element.core.context.ContextManager;
@@ -61,6 +64,7 @@ import net.minestom.server.event.player.PlayerUseItemEvent;
 import net.minestom.server.event.player.PlayerUseItemOnBlockEvent;
 import net.minestom.server.instance.Instance;
 import net.minestom.server.instance.InstanceManager;
+import net.minestom.server.scoreboard.Sidebar;
 import net.minestom.server.utils.chunk.ChunkUtils;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
@@ -168,9 +172,31 @@ public class ZombiesSceneProvider extends SceneProviderAbstract<ZombiesScene, Zo
         SpawnDistributor spawnDistributor = new BasicSpawnDistributor(mobModels::get, random, zombiesPlayers.values());
         ZombiesMap map = new ZombiesMap(mapInfo, contextManager, instance, mobSpawner, blockHandler, spawnDistributor,
                 keyParser);
-        StageTransition stageTransition = new StageTransition(
-                List.of(new IdleStage(zombiesPlayers), new CountdownStage(zombiesPlayers, 200L),
-                        new InGameStage(zombiesPlayers, map), new EndGameStage(zombiesPlayers, 100L)));
+        Stage idle = new IdleStage(Collections.emptyList(), zombiesPlayers.values());
+        Stage countdown = new CountdownStage(Collections.singleton(
+                new GroupSidebarUpdaterActivable(zombiesPlayers.values(), mapInfo.settings().maxPlayers()) {
+                    @Override
+                    protected @NotNull SidebarUpdater createUpdater(@NotNull ZombiesPlayer zombiesPlayer) {
+                        return new SidebarUpdater(zombiesPlayer.getSidebar(), List.of(
+
+                        ));
+                    }
+                }), zombiesPlayers.values(), 200L);
+        Stage inGame = new InGameStage(Collections.singleton(
+                new GroupSidebarUpdaterActivable(zombiesPlayers.values(), mapInfo.settings().maxPlayers()) {
+                    @Override
+                    protected @NotNull SidebarUpdater createUpdater(@NotNull ZombiesPlayer zombiesPlayer) {
+                        return null;
+                    }
+                }), map);
+        Stage endGame = new EndGameStage(Collections.singleton(
+                new GroupSidebarUpdaterActivable(zombiesPlayers.values(), mapInfo.settings().maxPlayers()) {
+                    @Override
+                    protected @NotNull SidebarUpdater createUpdater(@NotNull ZombiesPlayer zombiesPlayer) {
+                        return null;
+                    }
+                }), zombiesPlayers.values(), 100L);
+        StageTransition stageTransition = new StageTransition(List.of(idle, countdown, inGame, endGame));
 
         EventNode<Event> sceneNode = EventNode.all(instance.getUniqueId().toString());
         sceneNode.addListener(EntityDeathEvent.class,
@@ -201,7 +227,7 @@ public class ZombiesSceneProvider extends SceneProviderAbstract<ZombiesScene, Zo
             EquipmentHandler equipmentHandler = new EquipmentHandler(access);
             Supplier<ZombiesPlayerState> defaultStateSupplier =
                     () -> new BasicZombiesPlayerState(Component.text("ALIVE", NamedTextColor.GREEN),
-                            ZombiesPlayerStateKeys.ALIVE, Collections.singleton(new BasicZombiesPlayerState.Action() {
+                            ZombiesPlayerStateKeys.ALIVE, Collections.singleton(new Activable() {
                         @Override
                         public void start() {
                             playerView.getPlayer().ifPresent(player -> {
@@ -217,7 +243,7 @@ public class ZombiesSceneProvider extends SceneProviderAbstract<ZombiesScene, Zo
                     }));
             Supplier<ZombiesPlayerState> quitStateSupplier =
                     () -> new BasicZombiesPlayerState(Component.text("QUIT", NamedTextColor.RED),
-                            ZombiesPlayerStateKeys.QUIT, Collections.singleton(new BasicZombiesPlayerState.Action() {
+                            ZombiesPlayerStateKeys.QUIT, Collections.singleton(new Activable() {
                         @Override
                         public void start() {
                             Reference<Instance> instanceReference = new WeakReference<>(instance);
@@ -249,10 +275,10 @@ public class ZombiesSceneProvider extends SceneProviderAbstract<ZombiesScene, Zo
                             });
                         }
                     }));
-            BiFunction<Component, Collection<BasicZombiesPlayerState.Action>, ZombiesPlayerState> deadStateFunction =
+            BiFunction<Component, Collection<Activable>, ZombiesPlayerState> deadStateFunction =
                     (roomName, actions) -> {
-                        List<BasicZombiesPlayerState.Action> actionsCopy = new ArrayList<>(actions);
-                        actionsCopy.add(new BasicZombiesPlayerState.Action() {
+                        List<Activable> actionsCopy = new ArrayList<>(actions);
+                        actionsCopy.add(new Activable() {
                             @Override
                             public void start() {
                                 Reference<Instance> instanceReference = new WeakReference<>(instance);
@@ -296,8 +322,8 @@ public class ZombiesSceneProvider extends SceneProviderAbstract<ZombiesScene, Zo
                             location = VecUtils.toBlockInt(minestomLocation);
                             roomName = map.roomAt(location).map(room -> room.getData().displayName()).orElse(null);
                         }
-                        ArrayList<KnockedPlayerState.Action> knockedActions = new ArrayList<>(2);
-                        knockedActions.add(new KnockedPlayerState.Action() {
+                        ArrayList<KnockedPlayerState.Activable> knockedActions = new ArrayList<>(2);
+                        knockedActions.add(new KnockedPlayerState.Activable() {
                             @Override
                             public void start() {
                                 playerView.getPlayer().ifPresent(player -> {
@@ -309,8 +335,36 @@ public class ZombiesSceneProvider extends SceneProviderAbstract<ZombiesScene, Zo
                                     meta.setCanTriggerSLA(false);
                                 });
                             }
+
+                            @Override
+                            public void end(@Nullable ZombiesPlayer reviver) {
+                                Reference<Instance> instanceReference = new WeakReference<>(instance);
+                                if (reviver != null) {
+                                    playerView.getDisplayName().thenCombine(reviver.getPlayerView().getDisplayName(),
+                                            (displayName, reviverDisplayName) -> {
+                                                Instance instance = instanceReference.get();
+                                                if (instance == null) {
+                                                    return null;
+                                                }
+                                                instance.sendMessage(Component.textOfChildren(displayName,
+                                                        Component.text(" was revived by "), reviverDisplayName));
+
+                                                return null;
+                                            });
+                                }
+                                else {
+                                    playerView.getDisplayName().thenAccept(displayName -> {
+                                        Instance instance = instanceReference.get();
+                                        if (instance == null) {
+                                            return;
+                                        }
+                                        instance.sendMessage(
+                                                Component.textOfChildren(displayName, Component.text(" was revived")));
+                                    });
+                                }
+                            }
                         });
-                        ArrayList<BasicZombiesPlayerState.Action> deadActions = new ArrayList<>(1);
+                        ArrayList<Activable> deadActions = new ArrayList<>(1);
                         if (location != null && roomName != null) {
                             //TODO
                             Hologram hologram = new InstanceHologram(Vec3D.of(location), 1.0);
@@ -326,7 +380,7 @@ public class ZombiesSceneProvider extends SceneProviderAbstract<ZombiesScene, Zo
                             TickFormatter tickFormatter =
                                     new BasicTickFormatter(NamedTextColor.YELLOW, NamedTextColor.YELLOW);
                             Corpse corpse = new Corpse(hologram, corpseEntity, tickFormatter);
-                            knockedActions.add(new KnockedPlayerState.Action() {
+                            knockedActions.add(new KnockedPlayerState.Activable() {
                                 @Override
                                 public void start() {
                                     corpse.start();
@@ -345,36 +399,10 @@ public class ZombiesSceneProvider extends SceneProviderAbstract<ZombiesScene, Zo
 
                                 @Override
                                 public void end(@Nullable ZombiesPlayer reviver) {
-                                    Reference<Instance> instanceReference = new WeakReference<>(instance);
-                                    if (reviver != null) {
-                                        playerView.getDisplayName()
-                                                .thenCombine(reviver.getPlayerView().getDisplayName(),
-                                                        (displayName, reviverDisplayName) -> {
-                                                            Instance instance = instanceReference.get();
-                                                            if (instance == null) {
-                                                                return null;
-                                                            }
-                                                            instance.sendMessage(Component.textOfChildren(displayName,
-                                                                    Component.text(" was revived by "),
-                                                                    reviverDisplayName));
-
-                                                            return null;
-                                                        });
-                                    }
-                                    else {
-                                        playerView.getDisplayName().thenAccept(displayName -> {
-                                            Instance instance = instanceReference.get();
-                                            if (instance == null) {
-                                                return;
-                                            }
-                                            instance.sendMessage(Component.textOfChildren(displayName,
-                                                    Component.text(" was revived")));
-                                        });
-                                    }
                                     corpse.disable();
                                 }
                             });
-                            deadActions.add(new BasicZombiesPlayerState.Action() {
+                            deadActions.add(new Activable() {
                                 @Override
                                 public void end() {
                                     corpse.remove();
@@ -404,6 +432,7 @@ public class ZombiesSceneProvider extends SceneProviderAbstract<ZombiesScene, Zo
                         return deadStateFunction.apply(roomName, Collections.emptyList());
                     }, ZombiesPlayerStateKeys.QUIT, quitStateSupplier);
             PlayerStateSwitcher stateSwitcher = new PlayerStateSwitcher(defaultStateSupplier.get());
+            Sidebar sidebar = new Sidebar(Component.text("ZOMBIES", NamedTextColor.RED));
 
             EquipmentCreator temporaryCreator = new EquipmentCreator() {
                 @Override
@@ -419,7 +448,7 @@ public class ZombiesSceneProvider extends SceneProviderAbstract<ZombiesScene, Zo
             };
 
             return new BasicZombiesPlayer(playerView, meta, coins, kills, equipmentHandler, temporaryCreator,
-                    profileSwitcher, stateSwitcher, stateSuppliers);
+                    profileSwitcher, stateSwitcher, stateSuppliers, sidebar);
         };
 
         ZombiesScene scene =
